# OpenGL-Learning

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Constants.h  Cube.cpp  FragmentShader.cpp  FragmentShader.h  GLSLShaders.h  GLobject.cpp  GLobject.h  GLobjectDynamic.cpp  GLobjectDynamic.h  Geometry.cpp  Geometry.h  Instances.cpp  Instances.h  Main.cpp  Object.cpp  Object.h  ObjectDynamic.cpp  ObjectDynamic.h  OpenGL Learning.sln  OpenGL Learning.vcxproj  OpenGL Learning.vcxproj.filters  Planet.cpp  Planet.h  Program.cpp  Program.h  README.md  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  (+12 more)
include/: Camera.h  Constants.h  Corp.h  Cube.h  FragmentShader.h  Geometry.h  Instances.h  Light.h  Material.h  Mesh.h  Model.h  Object.h  Program.h  ResourceManager.h  Shader.h  Sphere.h  Star.h  Texture.h  Utils.h  VertexShader.h  Window.h  WindowGl.h  glad.h
shaders/: frag-1.glsl  frag-2.glsl  shader-1.glsl
src/: Camera.cpp  Corp.cpp  Cube.cpp  FragmentShader.cpp  Instances.cpp  Main.cpp  Material.cpp  Mesh.cpp  Model.cpp  Object.cpp  Planet.cpp  Program.cpp  ResourceManager.cpp  Shader.cpp  Sphere.cpp  Star.cpp  Texture.cpp  Utils.cpp  VertexShader.cpp  Window.cpp  WindowGl.cpp
